aside estruturado e estilizado

--- a/index.html
+++ b/index.html
@@ -14,5 +14,16 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <aside>
+        <div class="aside-container">
+          <img src="assets/Logo.svg" alt="Ícone de fogos de artifício" />
+          <h1>Festivite</h1>
+          <p>Crie um convite digital para o seu evento</p>
+        </div>
+      </aside>
+      <main>main</main>
+    </div>
+  </body>
 </html>
