Layout geral pronto e adicionado estrutura básica do main

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
           <p>Crie um convite digital para o seu evento</p>
         </div>
       </aside>
-      <main>main</main>
+      <main>
+        <div class="main-container">
+          <h2>Crie seu convite</h2>
+
+          <form method="post" enctype="multipart/form-data">
+            <fieldset>Sobre</fieldset>
+            <fieldset>Personalização</fieldset>
+            <fieldset>Dados</fieldset>
+            <fieldset>Aceites</fieldset>
+          </form>
+        </div>
+      </main>
     </div>
   </body>
 </html>
