--- a/index.html
+++ b/index.html
@@ -28,7 +28,87 @@
           <h2>Crie seu convite</h2>
 
           <form method="post" enctype="multipart/form-data">
-            <fieldset>Sobre</fieldset>
+            <fieldset class="about">
+              <legend>
+                <img
+                  src="assets/icons/calendar.svg"
+                  alt="Ícone de calendário"
+                />
+                <p>Sobre o evento</p>
+              </legend>
+
+              <div class="input-wrapper">
+                <label for="title">Título</label>
+                <input
+                  type="text"
+                  name="title"
+                  id="title"
+                  placeholder="Nome do evento"
+                />
+              </div>
+
+              <div class="flex">
+                <div class="input-wrapper flex-1">
+                  <label for="start-datetime">Início</label>
+                  <input
+                    type="datetime-local"
+                    name="start-datetime"
+                    id="start-datetime"
+                    lang="pt-BR"
+                  />
+                </div>
+                <div class="input-wrapper flex-1">
+                  <label for="end-datetime">Fim</label>
+                  <input
+                    type="datetime-local"
+                    name="end-datetime"
+                    id="end-datetime"
+                    lang="pt-BR"
+                  />
+                </div>
+              </div>
+
+              <div class="flex">
+                <div class="flex-1">
+                  <div class="radio-wrapper">
+                    <div class="radio-inner">
+                      <input type="radio" name="meeting" id="inPerson" />
+                      <div class="radio-icon"></div>
+                      <label for="inPerson">Presencial</label>
+                    </div>
+                    <div class="radio-inner">
+                      <input type="radio" name="meeting" id="virtual" />
+                      <div class="radio-icon"></div>
+                      <label for="virtual">Online</label>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="flex-1">
+                  <div class="input-wrapper">
+                    <label for="place">Local</label>
+                    <input
+                      type="text"
+                      name="place"
+                      id="place"
+                      placeholder="Link ou endereço"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <div class="textarea-wrapper">
+                <label for="description">Descrição</label>
+                <textarea
+                  name="description"
+                  id="description"
+                  cols="30"
+                  rows="5"
+                  placeholder="Escreva sobre os detalhes do evento"
+                ></textarea>
+              </div>
+            </fieldset>
+
             <fieldset>Personalização</fieldset>
             <fieldset>Dados</fieldset>
             <fieldset>Aceites</fieldset>
