Seção sobre o evento estilizada

--- a/index.html
+++ b/index.html
@@ -70,16 +70,24 @@
 
               <div class="flex">
                 <div class="flex-1">
-                  <div class="radio-wrapper">
-                    <div class="radio-inner">
-                      <input type="radio" name="meeting" id="inPerson" />
-                      <div class="radio-icon"></div>
-                      <label for="inPerson">Presencial</label>
-                    </div>
-                    <div class="radio-inner">
-                      <input type="radio" name="meeting" id="virtual" />
-                      <div class="radio-icon"></div>
-                      <label for="virtual">Online</label>
+                  <div class="input-wrapper">
+                    <label>Tipo</label>
+                    <div class="radio-wrapper">
+                      <div class="radio-inner">
+                        <input
+                          type="radio"
+                          name="meeting"
+                          id="inPerson"
+                          checked
+                        />
+                        <div class="radio-icon"></div>
+                        <label for="inPerson">Presencial</label>
+                      </div>
+                      <div class="radio-inner">
+                        <input type="radio" name="meeting" id="virtual" />
+                        <div class="radio-icon"></div>
+                        <label for="virtual">Online</label>
+                      </div>
                     </div>
                   </div>
                 </div>
