--- a/index.html
+++ b/index.html
@@ -369,7 +369,12 @@
                   name="name"
                   id="name"
                   placeholder="Nome completo"
+                  required
                 />
+                <div class="error">
+                  <img src="assets/icons/circle-alert.svg" alt="" />
+                  <span>Campo obrigatório</span>
+                </div>
               </div>
 
               <div class="flex">
